AC_INIT(src/hnb.c)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(hnb,1.6.3)
dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

dnl Checks for libraries.
dnl Replace `main' with a function in -lcurses:
AC_CHECK_LIB(curses, move)
AC_HAVE_LIBRARY(xml2)


dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h unistd.h libxml/tree.h libxml/parser.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
AC_CHECK_FUNCS(strdup)

AC_OUTPUT(Makefile src/Makefile doc/Makefile util/Makefile)
